feat(about): implement about me section with responsive design
- Add comprehensive about section with personal information
- Create responsive grid layout for image and text
- Implement statistics cards with hover effects
- Add download CV functionality
- Include professional profile photo placeholder
- Ensure mobile-first responsive design

Closes #4

--- a/index.html
+++ b/index.html
@@ -57,11 +57,69 @@
     </div>
 </section>
 
-<!-- Placeholder sections for future development -->
-<section id="about" class="section">
+<!-- About Section -->
+<section id="about" class="about section">
     <div class="container">
         <h2 class="section-title text-center">About Me</h2>
-        <p class="text-center">This section will be developed in the next phase.</p>
+        <p class="section-subtitle text-center">
+            Get to know more about who I am, what I do, and what I'm passionate about.
+        </p>
+
+        <div class="about-content">
+            <div class="about-image">
+                <img src="assets/images/profile-photo.jpg" alt="Nelson Masbayi Muyodi" class="profile-photo">
+            </div>
+
+            <div class="about-text">
+                <h3>Hello, I'm Nelson Masbayi Muyodi</h3>
+                <p>
+                    I'm a passionate Computer Science student at Strathmore University with a strong
+                    foundation in software development and a keen interest in creating innovative
+                    technological solutions. My journey in programming began with curiosity about
+                    how things work behind the scenes, and has evolved into a commitment to building
+                    meaningful applications that solve real-world problems.
+                </p>
+                <p>
+                    Currently pursuing my degree in Computer Science, I've developed skills in
+                    various programming languages and frameworks. I'm particularly interested in
+                    web development, software engineering, and emerging technologies. When I'm not
+                    coding, you can find me exploring new technologies, contributing to open-source
+                    projects, or working on personal projects that challenge my skills.
+                </p>
+                <p>
+                    I believe in continuous learning and staying updated with the latest industry
+                    trends. My goal is to become a skilled software developer who can contribute
+                    to innovative projects and make a positive impact through technology.
+                </p>
+
+                <div class="about-stats">
+                    <div class="stat-item">
+                        <span class="stat-number">3+</span>
+                        <span class="stat-label">Years Coding</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">10+</span>
+                        <span class="stat-label">Projects</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">5+</span>
+                        <span class="stat-label">Technologies</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">100%</span>
+                        <span class="stat-label">Dedication</span>
+                    </div>
+                </div>
+
+                <div class="about-buttons">
+                    <a href="assets/docs/Nelson_Muyodi_CV.pdf" class="btn-download" download>
+                        <i class="fas fa-download"></i>
+                        Download CV
+                    </a>
+                    <a href="#contact" class="btn">Contact Me</a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
