--- a/index.html
+++ b/index.html
@@ -275,10 +275,281 @@
     </div>
 </section>
 
-<section id="projects" class="section">
+<!-- Projects Section -->
+<section id="projects" class="projects section">
     <div class="container">
-        <h2 class="section-title text-center">Projects</h2>
-        <p class="text-center">This section will be developed in the next phase.</p>
+        <h2 class="section-title text-center">My Projects</h2>
+        <p class="section-subtitle text-center">
+            Here are some of the projects I've worked on, showcasing different technologies and skills.
+        </p>
+
+        <div class="projects-content">
+            <!-- Filter Buttons -->
+            <div class="project-filters">
+                <button class="filter-btn active" data-filter="all">All Projects</button>
+                <button class="filter-btn" data-filter="web">Web Development</button>
+                <button class="filter-btn" data-filter="mobile">Mobile Apps</button>
+                <button class="filter-btn" data-filter="desktop">Desktop Apps</button>
+                <button class="filter-btn" data-filter="ai">AI/ML</button>
+            </div>
+
+            <!-- Projects Grid -->
+            <div class="projects-grid">
+                <!-- Project 1: Portfolio Website -->
+                <div class="project-card" data-category="web">
+                    <div class="project-image">
+                        <img src="assets/images/projects/project1.jpg" alt="Portfolio Website">
+                        <div class="project-overlay">
+                            <a href="#" class="overlay-btn">
+                                <i class="fas fa-eye"></i>
+                                Live Demo
+                            </a>
+                            <a href="#" class="overlay-btn">
+                                <i class="fab fa-github"></i>
+                                Code
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-category">Web Development</span>
+                        <h3 class="project-title">Personal Portfolio Website</h3>
+                        <p class="project-description">
+                            A responsive portfolio website built with modern web technologies,
+                            featuring smooth animations, interactive elements, and optimized performance.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">GitHub Pages</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link primary">
+                                <i class="fas fa-external-link-alt"></i>
+                                Live Demo
+                            </a>
+                            <a href="#" class="project-link secondary">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 2: E-commerce Platform -->
+                <div class="project-card" data-category="web">
+                    <div class="project-image">
+                        <img src="assets/images/projects/project2.jpg" alt="E-commerce Platform">
+                        <div class="project-overlay">
+                            <a href="#" class="overlay-btn">
+                                <i class="fas fa-eye"></i>
+                                Live Demo
+                            </a>
+                            <a href="#" class="overlay-btn">
+                                <i class="fab fa-github"></i>
+                                Code
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-category">Web Development</span>
+                        <h3 class="project-title">E-commerce Platform</h3>
+                        <p class="project-description">
+                            A full-stack e-commerce solution with user authentication, product management,
+                            shopping cart functionality, and secure payment integration.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Node.js</span>
+                            <span class="tech-tag">MongoDB</span>
+                            <span class="tech-tag">Express.js</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link primary">
+                                <i class="fas fa-external-link-alt"></i>
+                                Live Demo
+                            </a>
+                            <a href="#" class="project-link secondary">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 3: Task Management App -->
+                <div class="project-card" data-category="mobile">
+                    <div class="project-image">
+                        <img src="assets/images/projects/project3.jpg" alt="Task Management App">
+                        <div class="project-overlay">
+                            <a href="#" class="overlay-btn">
+                                <i class="fas fa-eye"></i>
+                                Demo
+                            </a>
+                            <a href="#" class="overlay-btn">
+                                <i class="fab fa-github"></i>
+                                Code
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-category">Mobile Apps</span>
+                        <h3 class="project-title">Task Management Mobile App</h3>
+                        <p class="project-description">
+                            A cross-platform mobile application for task management with features like
+                            reminders, categories, progress tracking, and team collaboration.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">React Native</span>
+                            <span class="tech-tag">Firebase</span>
+                            <span class="tech-tag">Redux</span>
+                            <span class="tech-tag">Expo</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link primary">
+                                <i class="fas fa-mobile-alt"></i>
+                                App Demo
+                            </a>
+                            <a href="#" class="project-link secondary">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 4: Student Management System -->
+                <div class="project-card" data-category="desktop">
+                    <div class="project-image">
+                        <img src="assets/images/projects/project4.jpg" alt="Student Management System">
+                        <div class="project-overlay">
+                            <a href="#" class="overlay-btn">
+                                <i class="fas fa-eye"></i>
+                                Screenshots
+                            </a>
+                            <a href="#" class="overlay-btn">
+                                <i class="fab fa-github"></i>
+                                Code
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-category">Desktop Apps</span>
+                        <h3 class="project-title">Student Management System</h3>
+                        <p class="project-description">
+                            A comprehensive desktop application for managing student records, grades,
+                            attendance, and generating reports with an intuitive user interface.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java</span>
+                            <span class="tech-tag">JavaFX</span>
+                            <span class="tech-tag">MySQL</span>
+                            <span class="tech-tag">JDBC</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link primary">
+                                <i class="fas fa-download"></i>
+                                Download
+                            </a>
+                            <a href="#" class="project-link secondary">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 5: Weather Prediction AI -->
+                <div class="project-card" data-category="ai">
+                    <div class="project-image">
+                        <img src="assets/images/projects/project5.jpg" alt="Weather Prediction AI">
+                        <div class="project-overlay">
+                            <a href="#" class="overlay-btn">
+                                <i class="fas fa-eye"></i>
+                                Demo
+                            </a>
+                            <a href="#" class="overlay-btn">
+                                <i class="fab fa-github"></i>
+                                Code
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-category">AI/ML</span>
+                        <h3 class="project-title">Weather Prediction Model</h3>
+                        <p class="project-description">
+                            Machine learning model that predicts weather patterns using historical data,
+                            implemented with Python and deployed as a web service.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">TensorFlow</span>
+                            <span class="tech-tag">Pandas</span>
+                            <span class="tech-tag">Flask</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link primary">
+                                <i class="fas fa-robot"></i>
+                                Try Model
+                            </a>
+                            <a href="#" class="project-link secondary">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 6: Library Management System -->
+                <div class="project-card" data-category="web">
+                    <div class="project-image">
+                        <img src="assets/images/projects/project6.jpg" alt="Library Management System">
+                        <div class="project-overlay">
+                            <a href="#" class="overlay-btn">
+                                <i class="fas fa-eye"></i>
+                                Live Demo
+                            </a>
+                            <a href="#" class="overlay-btn">
+                                <i class="fab fa-github"></i>
+                                Code
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-category">Web Development</span>
+                        <h3 class="project-title">Library Management System</h3>
+                        <p class="project-description">
+                            A web-based library management system with features for book cataloging,
+                            member management, borrowing/returning books, and generating reports.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Django</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">PostgreSQL</span>
+                            <span class="tech-tag">Bootstrap</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link primary">
+                                <i class="fas fa-external-link-alt"></i>
+                                Live Demo
+                            </a>
+                            <a href="#" class="project-link secondary">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Load More Button -->
+            <div class="load-more-container">
+                <button class="load-more-btn">
+                    <i class="fas fa-plus"></i>
+                    Load More Projects
+                </button>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -299,6 +570,7 @@
 <!-- JavaScript -->
 <script src="js/components/navigation.js"></script>
 <script src="js/components/skills.js"></script>
+<script src="js/components/projects.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
