feat(contact): add contact form with validation and footer
- Implement comprehensive contact form with real-time validation
- Add contact information display with icons
- Create social media links integration
- Design comprehensive footer with multiple sections
- Add newsletter subscription form
- Include form success/error handling
- Ensure mobile-first responsive design

Closes #8, #9

--- a/index.html
+++ b/index.html
@@ -553,17 +553,221 @@
     </div>
 </section>
 
-<section id="contact" class="section">
+<!-- Contact Section -->
+<section id="contact" class="contact section">
     <div class="container">
-        <h2 class="section-title text-center">Contact</h2>
-        <p class="text-center">This section will be developed in the next phase.</p>
+        <h2 class="section-title text-center">Get In Touch</h2>
+        <p class="section-subtitle text-center">
+            Have a project in mind or want to collaborate? I'd love to hear from you!
+        </p>
+
+        <div class="contact-content">
+            <div class="contact-grid">
+                <div class="contact-info">
+                    <h3>Let's Connect</h3>
+                    <p>
+                        I'm always open to discussing new opportunities, interesting projects,
+                        or just having a chat about technology and innovation. Feel free to reach out!
+                    </p>
+
+                    <div class="contact-details">
+                        <div class="contact-item">
+                            <div class="contact-icon">
+                                <i class="fas fa-envelope"></i>
+                            </div>
+                            <div class="contact-text">
+                                <span class="contact-label">Email</span>
+                                <span class="contact-value">nelson.muyodi@strathmore.edu</span>
+                            </div>
+                        </div>
+
+                        <div class="contact-item">
+                            <div class="contact-icon">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <div class="contact-text">
+                                <span class="contact-label">Phone</span>
+                                <span class="contact-value">+254 759 792 279</span>
+                            </div>
+                        </div>
+
+                        <div class="contact-item">
+                            <div class="contact-icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div class="contact-text">
+                                <span class="contact-label">Location</span>
+                                <span class="contact-value">Nairobi, Kenya</span>
+                            </div>
+                        </div>
+
+                        <div class="contact-item">
+                            <div class="contact-icon">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                            <div class="contact-text">
+                                <span class="contact-label">University</span>
+                                <span class="contact-value">Strathmore University</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="social-links">
+                        <a href="https://github.com/nmsby" target="_blank" class="social-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://linkedin.com/in/nmsby" target="_blank" class="social-link">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="https://twitter.com/n_msby" target="_blank" class="social-link">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://instagram.com/n.masbayi" target="_blank" class="social-link">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="contact-form-container">
+                    <form class="contact-form">
+                        <div class="success-message">
+                            <i class="fas fa-check-circle"></i>
+                            Thank you! Your message has been sent successfully. I'll get back to you soon.
+                        </div>
+
+                        <div class="form-group">
+                            <label for="name" class="form-label">Full Name</label>
+                            <input
+                                    type="text"
+                                    id="name"
+                                    name="name"
+                                    class="form-input"
+                                    placeholder="Enter your full name"
+                                    required
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input
+                                    type="email"
+                                    id="email"
+                                    name="email"
+                                    class="form-input"
+                                    placeholder="Enter your email address"
+                                    required
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="subject" class="form-label">Subject</label>
+                            <input
+                                    type="text"
+                                    id="subject"
+                                    name="subject"
+                                    class="form-input"
+                                    placeholder="What's this about?"
+                                    required
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea
+                                    id="message"
+                                    name="message"
+                                    class="form-textarea"
+                                    placeholder="Tell me about your project or how I can help you..."
+                                    required
+                            ></textarea>
+                        </div>
+
+                        <button type="submit" class="form-button">
+                            <i class="fas fa-paper-plane"></i>
+                            Send Message
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
 <!-- Footer -->
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2025 Nelson Masbayi Muyodi. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Nelson Muyodi</h3>
+                <p>
+                    Computer Science student passionate about creating innovative solutions
+                    through code. Always learning, always building, always improving.
+                </p>
+                <div class="footer-social">
+                    <a href="https://github.com/nmsby" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://linkedin.com/in/nmsby" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://twitter.com/n_msby" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://instagram.com/n.masbayi" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul class="footer-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h3>Services</h3>
+                <ul class="footer-links">
+                    <li><a href="#">Web Development</a></li>
+                    <li><a href="#">Mobile App Development</a></li>
+                    <li><a href="#">UI/UX Design</a></li>
+                    <li><a href="#">Database Design</a></li>
+                    <li><a href="#">Technical Consulting</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h3>Stay Updated</h3>
+                <p>Subscribe to get updates on my latest projects and blog posts.</p>
+                <div class="newsletter">
+                    <form class="newsletter-form">
+                        <input
+                                type="email"
+                                class="newsletter-input"
+                                placeholder="Enter your email"
+                                required
+                        >
+                        <button type="submit" class="newsletter-btn">
+                            <i class="fas fa-paper-plane"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 Nelson Masbayi Muyodi. All rights reserved.</p>
+            <div class="footer-bottom-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Site Map</a>
+            </div>
+        </div>
     </div>
 </footer>
 
@@ -571,6 +775,7 @@
 <script src="js/components/navigation.js"></script>
 <script src="js/components/skills.js"></script>
 <script src="js/components/projects.js"></script>
+<script src="js/components/contact.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
