style(responsive): enhance mobile responsiveness across all sections
- Add comprehensive responsive design with breakpoint-specific styles
- Implement enhanced mobile navigation with overlay and gestures
- Add touch-friendly button sizes and interactions
- Include dark mode and high contrast media queries
- Add print styles for better accessibility
- Implement CSS custom properties for consistent spacing
- Add mobile enhancements with touch gestures
- Include orientation change handling
- Add swipe indicators and mobile-specific features

Closes #11

--- a/index.html
+++ b/index.html
@@ -776,6 +776,7 @@
 <script src="js/components/skills.js"></script>
 <script src="js/components/projects.js"></script>
 <script src="js/components/contact.js"></script>
+<script src="js/components/mobile-enhancements.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
